Hide right toolbar buttons in upload mode, fix toolbar alignment

--- a/assets/css/editor-v2.css
+++ b/assets/css/editor-v2.css
@@ -40,7 +40,6 @@ body > div:first-of-type {
   font-weight: bold;
   font-size: 1.2rem;
   margin: 0;
-  margin-top: 0.2rem;
 }
 
 main > div:first-child {
@@ -64,7 +63,7 @@ main > div:last-child {
   padding-left: 1.4rem;
 }
 
-.toolbar > div > * {
+.toolbar > div:first-child > * {
   line-height: 1;
   font-weight: bold;
   font-size: 1.2rem;
